# sysexd

./: CMakeLists.txt  COPYING  README.md
cmake/: CMakeHelpers.cmake
src/: CMakeLists.txt  sysexd.cpp
